add 政治資金収支報告書一括登録準備(前半)